feat(home): add delete feature and integrate animated modal

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
   --color-secondary: #777777;
   --color-terciary: #CCCCCC;
   --color-line: #999999;
+  --color-delete: #FF5151;
+  --color-save: #47B960;
   --font-primary:  "Roboto", sans-serif;
   --color-background: #DDDDDD;
   --text-title: 22px;
